# evosim

./: .gitignore  Cargo.toml  README.md
crates/evosim-cli/: Cargo.toml
crates/evosim-cli/src/: champions.rs  cli.rs  config.rs  inspect.rs  main.rs  stats.rs
crates/evosim-core/: Cargo.toml
crates/evosim-core/src/: constants.rs  creature.rs  factory.rs  lib.rs  muscle.rs  particle.rs  world.rs
crates/evosim-genetics/: Cargo.toml
crates/evosim-genetics/src/: genome.rs  lib.rs  mutation.rs  selection.rs
crates/evosim-renderer/: Cargo.toml
crates/evosim-renderer/src/: app.rs  background.rs  camera.rs  effects.rs  hud.rs  input.rs  lib.rs  render.rs  simulation.rs  trails.rs
