[package]
name = "evosim-cli"
version = "0.1.0"
edition = "2021"
description = "Command-line interface and orchestrator for the evosim evolution simulator"
license = "MIT"

[[bin]]
name = "evosim"
path = "src/main.rs"

[dependencies]
evosim-core = { path = "../evosim-core" }
evosim-genetics = { path = "../evosim-genetics" }
serde = { workspace = true }
serde_json = "1"
toml = { workspace = true }
rayon = { workspace = true }
rand = { workspace = true }
